--- a/src/app/style.css
+++ b/src/app/style.css
@@ -45,6 +45,25 @@
   height: 16px;
 }
 
+.updateIcon {
+  position: absolute;
+  top: 10px;
+  right: 12px;
+
+  cursor: pointer;
+}
+
+.updateIcon svg {
+  fill: var(--ring-icon-color);
+
+  width: 14px;
+  height: 14px;
+}
+
+.updateIcon:hover svg {
+  fill: var(--ring-icon-hover-color);
+}
+
 .widgetTitleText {
   overflow: hidden;
 
@@ -52,7 +71,7 @@
   height: 16px;
 
   margin: 0 12px;
-  padding: 8px 0 6px;
+  padding: 8px 16px 6px 0;
 
   cursor: default;
   white-space: nowrap;
