--- a/src/app/style.css
+++ b/src/app/style.css
@@ -45,22 +45,32 @@
   height: 16px;
 }
 
-.updateIcon {
+.widgetRefreshControl {
   position: absolute;
   top: 10px;
   right: 12px;
 
+  display: none;
+
   cursor: pointer;
 }
 
-.updateIcon svg {
+.widgetRefreshControlActive {
+  display: inline-block;
+}
+
+.widgetRefreshControlLoading svg {
+  animation: icon-rotating 0.5s linear infinite;
+}
+
+.widgetRefreshControl svg {
   fill: var(--ring-icon-color);
 
   width: 14px;
   height: 14px;
 }
 
-.updateIcon:hover svg {
+.widgetRefreshControl:hover svg {
   fill: var(--ring-icon-hover-color);
 }
 
@@ -81,7 +91,7 @@
 }
 
 .widgetTitleTextPlaceholder {
-
+  display: inline-block;
 }
 
 .widgetBody {
@@ -150,5 +160,15 @@
 
   to {
     transform: translateX(0);
+  }
+}
+
+@keyframes icon-rotating {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
   }
 }
